<android.support.design.widget.CoordinatorLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/white">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar_forgot_password"
            app:titleTextColor="@android:color/white"
            android:theme="@style/AppTheme.FullActionBar"
            >
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_title"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textAlignment="center"
            android:paddingBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_paragraph"
            android:textAlignment="center"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrapper_edit_text_forgot_password_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_marginTop="8dp"
            android:id="@+id/button_request_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_request_button"
            android:textColor="@android:color/white"
            />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
