<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingRight="8dp"
        android:paddingLeft="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_already_have_an_account_title"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textAlignment="center"
            android:paddingBottom="16dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrapper_edit_text_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrapper_edit_text_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/text_view_forgot_password"
            android:clickable="true"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot_password"
            android:textAlignment="textEnd"
            android:background="?attr/selectableItemBackground"
            android:focusable="true" />

        <Button
            android:padding="16dp"
            android:layout_marginTop="8dp"
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/login_login_button"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_loading_area"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#80FFFFFF">
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_below="@id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Loading"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</RelativeLayout>