<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.v7.widget.Toolbar
            app:titleTextColor="@android:color/white"
            app:subtitleTextColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar_write"
            android:theme="@style/AppTheme.FullActionBar"
            >

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView

        android:layout_marginTop="?attr/actionBarSize"
        android:paddingTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="8dp"
            android:paddingBottom="8dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/edit_text_new_content_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/write_new_title"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_new_content_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_new_category"
                android:spinnerMode="dialog"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_marginBottom="8dp"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/edit_text_new_content_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/write_new_content"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <com.hootsuite.nachos.NachoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/write_new_tags"
                    android:id="@+id/nacho_text_view_new_content_tag"
                    />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:textColor="@android:color/white"
                android:id="@+id/button_add_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/write_new_add_picture_button"
                android:layout_marginBottom="8dp"
                />

            <ImageView
                android:id="@+id/image_view_preview_new_content"
                android:layout_width="match_parent"
                android:layout_height="@dimen/chupy_read_item_image_height"
                android:scaleType="centerCrop"/>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
