<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    >

    <RelativeLayout
        android:layout_marginTop="40dp"
        android:id="@+id/relative_layout_image_area"
        android:layout_width="match_parent"
        android:layout_height="@dimen/chupy_read_item_image_height"
        android:gravity="center">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_centerHorizontal="true"
            android:id="@+id/circle_image_profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@color/colorAccent"
            app:civ_border_color="@color/colorPrimaryDark"
            app:civ_border_width="4dp"/>
        <TextView
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="16dp"
            android:id="@+id/text_view_user_name"
            android:layout_below="@id/circle_image_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textAlignment="center"
            tools:text="Hi Daniyal"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_view_edit_profile"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/component_bordered_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_menu_edit"
            android:textSize="@dimen/chupy_profile_menu_text_size"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"/>
        <TextView
            android:id="@+id/text_view_change_password"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/component_bordered_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_menu_change_password"
            android:textSize="@dimen/chupy_profile_menu_text_size"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            />
        <TextView
            android:id="@+id/text_view_about"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/component_bordered_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_menu_about"
            android:textSize="@dimen/chupy_profile_menu_text_size"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            />
        <TextView
            android:id="@+id/text_view_logout"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/component_bordered_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_menu_logout"
            android:textSize="@dimen/chupy_profile_menu_text_size"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            />
    </LinearLayout>
</RelativeLayout>